# blind.tactics

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.txt  docker-compose.yml  justfile
.circleci/: config.yml
.github/workflows/: ci.yml
sql/: init.sql
src/lib/: db.rs  mod.rs  types.rs  utils.rs
src/lib/games/: checks.rs  common_squares.rs  knight_path.rs  mod.rs  utils.rs
ui/: .gitignore  Makefile  index-dev.js  index.html  index.js  justfile  package.json  packages.dhall  shell.nix  spago.dhall
ui/assets/: index.html
ui/css/: board-theme.css  main.css
ui/dev/: index.html
ui/src/: AppM.purs  Env.purs  Main.purs
ui/src/Api/: Request.purs  Utils.purs
ui/src/Capability/: Log.purs  Navigate.purs  Now.purs
ui/src/Capability/Resource/: ChecksPuzzle.purs  CommonSquaresPuzzle.purs  KnightPathPuzzle.purs  TacticsPuzzle.purs
ui/src/Component/: ChessBoard.purs  ChessGround.purs  CommonSquares.purs  FindChecks.purs  KnightPath.purs  MoveInput.purs  Router.purs  Utils.purs
ui/src/Component/FFI/: ChessGround.js  ChessGround.purs
ui/src/Component/HTML/: Footer.purs  Games.purs  Header.purs  Utils.purs
ui/src/Data/: ExternalPuzzles.js  ExternalPuzzles.purs  LogItem.purs  LoremIpsum.js  LoremIpsum.purs  ProblemInput.purs  Router.purs  Shape.purs
ui/src/Data/FFI/: Chartist.js  Chartist.purs  Tagify.js  Tagify.purs
ui/src/Data/Tactics/: Puzzle.purs
ui/src/Page/: CommonSquares.purs  FindChecks.purs  Home.purs  KnightPath.purs  Problem.purs
ui/test/: Main.purs
