[package]
name        = "blind"
version     = "0.1.0"
authors     = ["Konstantinos Sideris <siderisk@auth.gr>"]
edition     = "2021"
default-run = "server"

[dependencies]
actix-web         = { version = "4.2.1", features = ["rustls"] }
actix-files       = "0.6.2"
csv               = "1.1.6"
chrono            = { version = "0.4", features = ["serde"] }
env_logger        = "0.10.0"
log               = "0.4.17"
nom               = "6"
pgnparse          = "0.1.8"
reqwest           = { version = "0.11.13", features = ["json", "rustls-tls"] }
serde             = { version = "1", features = ["derive"] }
serde_derive      = "1"
serde_json        = "1"
shakmaty          = "0.19.0"
rand              = "0.8.5"
tokio-postgres    = "0.7.7"
postgres-types    = { version = "0.2.2", features = ["derive"] }
deadpool-postgres = "0.10.3"
structopt         = "0.3.26"
itertools         = "0.10.5"
serde_postgres    = "0.2.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "blind"
path = "src/lib/mod.rs"
